--- a/iOSJuniorApplication/iOSJuniorApplication/Resources/StoryBoards/MainStoryBoard.storyboard
+++ b/iOSJuniorApplication/iOSJuniorApplication/Resources/StoryBoards/MainStoryBoard.storyboard
@@ -80,6 +80,16 @@
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="8U6-WX-KPI" appends="YES" id="aYZ-Ko-oQx"/>
+                                    <outletCollection property="gestureRecognizers" destination="Tth-gz-syx" appends="YES" id="bz0-ty-yUD"/>
+                                </connections>
+                            </view>
+                            <view contentMode="scaleToFill" id="aKE-zr-UFr">
+                                <rect key="frame" x="80" y="189" width="160" height="252"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="TPE-97-gk1" appends="YES" id="2X9-tA-Wc3"/>
                                 </connections>
                             </view>
                         </subviews>
@@ -112,6 +122,16 @@
                         <action selector="handleLongPress:" destination="LWd-la-14o" id="TQq-ni-WJx"/>
                     </connections>
                 </pongPressGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="2" numberOfTouchesRequired="2" id="TPE-97-gk1">
+                    <connections>
+                        <action selector="handleTap:" destination="LWd-la-14o" id="voR-bi-34v"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <pinchGestureRecognizer id="Tth-gz-syx">
+                    <connections>
+                        <action selector="handlePinch:" destination="LWd-la-14o" id="R4A-RK-JuX"/>
+                    </connections>
+                </pinchGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1409" y="660"/>
         </scene>
