--- a/iOSJuniorApplication/iOSJuniorApplication/Resources/StoryBoards/MainStoryBoard.storyboard
+++ b/iOSJuniorApplication/iOSJuniorApplication/Resources/StoryBoards/MainStoryBoard.storyboard
@@ -1,180 +1,63 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="eAC-OC-YpO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QWj-wZ-yhj">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller - Touch Handling-->
-        <scene sceneID="GLI-Mj-dOa">
-            <objects>
-                <tableViewController id="w40-5e-Cad" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Nxg-iU-cOi">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <sections>
-                            <tableViewSection id="EkO-7j-EBo">
-                                <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="ZYW-oM-MEL" style="IBUITableViewCellStyleDefault" id="mDP-fc-PlW">
-                                        <rect key="frame" x="0.0" y="64" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mDP-fc-PlW" id="MmQ-qJ-SdZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Touch Callbacks" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZYW-oM-MEL">
-                                                    <rect key="frame" x="15" y="0.0" width="270" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="O7U-ur-xMh" kind="push" id="KAr-w9-Ql6"/>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="4fo-Rz-HEi" style="IBUITableViewCellStyleDefault" id="enF-Dr-i9R">
-                                        <rect key="frame" x="0.0" y="108" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="enF-Dr-i9R" id="XXN-QP-ijY">
-                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Gesture Recognizer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4fo-Rz-HEi">
-                                                    <rect key="frame" x="15" y="0.0" width="270" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="LWd-la-14o" kind="push" id="fI3-c2-cZX"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                        </sections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Touch Handling" id="Fen-Eb-xwc"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2xc-2B-gOb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="946" y="241"/>
-        </scene>
-        <!--Touch Handling With Gesture Recognizer View Controller-->
-        <scene sceneID="3dr-qo-poe">
-            <objects>
-                <viewController id="LWd-la-14o" customClass="TouchHandlingWithGestureRecognizerViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ogv-Kc-UaC">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" id="MCD-ki-JVj">
-                                <rect key="frame" x="20" y="20" width="280" height="110"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <color key="backgroundColor" red="0.68627450980000004" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
-                                <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="8U6-WX-KPI" appends="YES" id="aYZ-Ko-oQx"/>
-                                    <outletCollection property="gestureRecognizers" destination="Tth-gz-syx" appends="YES" id="bz0-ty-yUD"/>
-                                </connections>
-                            </view>
-                            <view contentMode="scaleToFill" id="aKE-zr-UFr">
-                                <rect key="frame" x="80" y="189" width="160" height="252"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="TPE-97-gk1" appends="YES" id="2X9-tA-Wc3"/>
-                                </connections>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <gestureRecognizers/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="cfw-D5-ypA" appends="YES" id="46o-tK-1dF"/>
-                            <outletCollection property="gestureRecognizers" destination="JXs-Db-YFl" appends="YES" id="OSa-Ti-kPK"/>
-                        </connections>
-                    </view>
-                    <extendedEdge key="edgesForExtendedLayout"/>
-                    <navigationItem key="navigationItem" id="Hac-gz-46D"/>
-                    <connections>
-                        <outlet property="view" destination="ogv-Kc-UaC" id="lZW-Bl-4Xk"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rm2-fo-k4f" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <swipeGestureRecognizer direction="right" id="cfw-D5-ypA">
-                    <connections>
-                        <action selector="handleSwipe:" destination="LWd-la-14o" id="M7q-6z-rf0"/>
-                    </connections>
-                </swipeGestureRecognizer>
-                <swipeGestureRecognizer direction="left" id="JXs-Db-YFl">
-                    <connections>
-                        <action selector="handleSwipe:" destination="LWd-la-14o" id="SB8-Is-TR9"/>
-                    </connections>
-                </swipeGestureRecognizer>
-                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="8U6-WX-KPI">
-                    <connections>
-                        <action selector="handleLongPress:" destination="LWd-la-14o" id="TQq-ni-WJx"/>
-                    </connections>
-                </pongPressGestureRecognizer>
-                <tapGestureRecognizer numberOfTapsRequired="2" numberOfTouchesRequired="2" id="TPE-97-gk1">
-                    <connections>
-                        <action selector="handleTap:" destination="LWd-la-14o" id="voR-bi-34v"/>
-                    </connections>
-                </tapGestureRecognizer>
-                <pinchGestureRecognizer id="Tth-gz-syx">
-                    <connections>
-                        <action selector="handlePinch:" destination="LWd-la-14o" id="R4A-RK-JuX"/>
-                    </connections>
-                </pinchGestureRecognizer>
-            </objects>
-            <point key="canvasLocation" x="1409" y="660"/>
-        </scene>
-        <!--Touch Handling With Touch Callbacks View Controller-->
-        <scene sceneID="95P-MI-6Ze">
-            <objects>
-                <viewController id="O7U-ur-xMh" customClass="TouchHandlingWithTouchCallbacksViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="an8-xQ-PM9">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" id="YLw-Q0-PXC" customClass="TouchHandlerView">
-                                <rect key="frame" x="60" y="202" width="200" height="100"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <color key="backgroundColor" red="0.68627450980000004" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <extendedEdge key="edgesForExtendedLayout"/>
-                    <navigationItem key="navigationItem" id="lJY-kr-GDz"/>
-                    <connections>
-                        <outlet property="view" destination="an8-xQ-PM9" id="j8H-aW-aHi"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9L1-3O-hJP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1413" y="-138"/>
-        </scene>
         <!--Navigation Controller-->
-        <scene sceneID="PX7-46-K7h">
+        <scene sceneID="Nk3-ie-pbh">
             <objects>
-                <navigationController definesPresentationContext="YES" id="eAC-OC-YpO" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xEb-gt-cCz">
+                <navigationController definesPresentationContext="YES" id="QWj-wZ-yhj" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xjU-Ou-Cs7">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="w40-5e-Cad" kind="relationship" relationship="rootViewController" id="HxE-tg-aws"/>
+                        <segue destination="mIA-wP-UMO" kind="relationship" relationship="rootViewController" id="eaT-CK-Zci"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nQu-Dj-S2x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zad-SI-1Rd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="412" y="241"/>
+            <point key="canvasLocation" x="1014" y="81"/>
+        </scene>
+        <!--View Resizing View Controller-->
+        <scene sceneID="2dI-8X-Q0d">
+            <objects>
+                <viewController id="mIA-wP-UMO" customClass="ViewResizingViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Q02-Ll-nLi">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Jvs-ia-gro">
+                                <rect key="frame" x="80" y="88" width="160" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <state key="normal" title="AutoResizeMask">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="autoResizeButtonPressed:" destination="mIA-wP-UMO" eventType="touchUpInside" id="Nhx-bk-Hf8"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="yhi-hB-TIo">
+                                <rect key="frame" x="80" y="126" width="160" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <state key="normal" title="AutoLayout">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="autoLayoutButtonPressed:" destination="mIA-wP-UMO" eventType="touchUpInside" id="saD-cV-cHa"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="JNS-dV-F7N"/>
+                    <connections>
+                        <outlet property="view" destination="Q02-Ll-nLi" id="b3S-wb-BrJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SBN-fp-4vu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1497" y="86"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
