- added view controller to demonstrate NSLock

--- a/iOSJuniorApplication/iOSJuniorApplication/Resources/StoryBoards/ThreadDemonstrationStoryBoard.storyboard
+++ b/iOSJuniorApplication/iOSJuniorApplication/Resources/StoryBoards/ThreadDemonstrationStoryBoard.storyboard
@@ -90,6 +90,26 @@
                                             <segue destination="SDj-Kb-wcd" kind="push" id="vgh-Pr-cuu"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="Dfe-Pl-5Me" style="IBUITableViewCellStyleDefault" id="A1Q-A2-oie">
+                                        <rect key="frame" x="0.0" y="132" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="A1Q-A2-oie" id="bWF-m4-38X">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Synchronization" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Dfe-Pl-5Me">
+                                                    <rect key="frame" x="15" y="0.0" width="270" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="xu5-uC-1Bv" kind="push" id="m5O-fT-zze"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -156,6 +176,58 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KKK-w0-moh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="394" y="509"/>
+        </scene>
+        <!--Synchronization View Controller - Synchronization-->
+        <scene sceneID="wfF-6f-2Od">
+            <objects>
+                <viewController id="xu5-uC-1Bv" customClass="SynchronizationViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Mfh-oD-bEA"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ahc-G8-7NU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lgc-P6-zfS">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fob-mM-5cS">
+                                <rect key="frame" x="191" y="49" width="109" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Start a Thread">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="startSomeThread:" destination="xu5-uC-1Bv" eventType="touchUpInside" id="ylb-m8-P6j"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dOY-Jg-vUV">
+                                <rect key="frame" x="141" y="87" width="159" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Start Another Thread">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="startSomeOtherThread:" destination="xu5-uC-1Bv" eventType="touchUpInside" id="hQK-So-pHE"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="threadName" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U1R-bt-304">
+                                <rect key="frame" x="20" y="49" width="124" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" title="Synchronization" id="Sn0-Wx-oqZ"/>
+                    <connections>
+                        <outlet property="_threadNameTextField" destination="U1R-bt-304" id="iOU-Sj-hwP"/>
+                        <outlet property="view" destination="lgc-P6-zfS" id="b4z-k4-cU6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YrG-rK-nIB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="394" y="1889"/>
         </scene>
         <!--Operation View Controller - NSOperation-->
         <scene sceneID="TMB-Wc-i9u">
