--- a/iOSJuniorApplication/iOSJuniorApplication/Resources/StoryBoards/LocalizationDemonstrationStoryboard.storyboard
+++ b/iOSJuniorApplication/iOSJuniorApplication/Resources/StoryBoards/LocalizationDemonstrationStoryboard.storyboard
@@ -29,6 +29,10 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="localized_bg.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="YnN-KJ-aKU">
+                                <rect key="frame" x="20" y="107" width="280" height="441"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -42,6 +46,9 @@
             <point key="canvasLocation" x="327" y="93"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="localized_bg.jpg" width="3060" height="2000"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
